card layout and content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,260 @@
-hello world
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Vegemite Boterham - Billie learns dutch</title>
+  <meta name="description" content="Billie Gray Web designer portfolio dutch learning">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <link rel="shortcut icon" href="/images/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i,900,900i|Space+Mono:400,700"
+    rel="stylesheet">
+  <link href="/css/style.css" rel=stylesheet>
+  <meta name="google" value="notranslate">
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+
+
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <img src="images/sandwich2.svg" alt="sandwich" />
+    </div>
+    <nav class="about">
+      <a href="about">
+        <img src="images/about.svg" />
+      </a>
+    </nav>
+  </header>
+
+  <section class="intro">
+    <h2>Hallo</h2>
+  </section>
+
+  <section class="cards-container">
+
+    <div class="card-base front front-1">
+      <div class="card-base back">
+        <p>Good morning, Good afternoon,<br> Good evening and Goodnight</p>
+      </div>
+      <p>Goedemorgen, Goedemiddag,<br> Goedenavond, Welterusten</p>
+    </div>
+
+    <div class="card-base front front-2">
+      <div class="card-base back">
+        <p>My Name is Billie</p>
+      </div>
+      <p>Ik heet Billie</p>
+    </div>
+
+    <div class="card-base front front-3">
+      <div class="card-base back">
+        <p>What is your name?</p>
+      </div>
+      <p>Hoe heet je?</p>
+    </div>
+
+    <div class="card-base front front-4">
+      <div class="card-base back">
+        <p>Nice to meet you</p>
+      </div>
+      <p>Aangenaam kennis te maken</p>
+    </div>
+
+    <div class="card-base front front-5">
+      <div class="card-base back">
+        <p>Do you speak Dutch?[Yes a bit]</p>
+      </div>
+      <p>Spreek je Nederlands? <br/> [Ja, een beetje]
+      </p>
+    </div>
+
+    <div class="card-base front front-6">
+      <div class="card-base back">
+        <p>I am learning Dutch</p>
+      </div>
+      <p>Ik ben Nederlands aan het leren</p>
+    </div>
+
+    <div class="card-base front front-7">
+      <div class="card-base back">
+        <p>Do you speak English?</p>
+      </div>
+      <p>Spreek je Engles?</p>
+    </div>
+
+    <div class="card-base front front-8">
+      <div class="card-base back">
+        <p>I am from Melbourne</p>
+      </div>
+      <p>Ik ben kom uit Melbourne</p>
+    </div>
+
+    <div class="card-base front front-9">
+      <div class="card-base back">
+        <p>I live here now</p>
+      </div>
+      <p>Ik woon hier nu</p>
+    </div>
+    <div class="card-base front front-10">
+      <div class="card-base back">
+        <p>I am a designer</p>
+      </div>
+      <p>Ik ben een ontwerper</p>
+    </div>
+    <div class="card-base front front-11">
+      <div class="card-base back">
+        <p>I am looking for a job,<br> I have a working permit</p>
+      </div>
+      <p>Ik zoek een baan,<br/>Ik heb een werkvergunning
+      </p>
+    </div>
+
+
+
+
+    <div class="card-base front front-12">
+      <div class="card-base back">
+        <p>How are you? </p>
+      </div>
+      <p>Hoe gaat het?</p>
+    </div>
+
+    <div class="card-base front front-13">
+      <div class="card-base back">
+        <p>I am well</p>
+      </div>
+      <p>Ik ben goede</p>
+    </div>
+
+    <div class="card-base front front-14">
+      <div class="card-base back">
+        <p>Shall we go for a drink?</p>
+      </div>
+      <p>Zullen we iets gaan drinken?</p>
+    </div>
+    <div class="card-base front front-15">
+      <div class="card-base back">
+        <p>I would like a Black / filter coffee please</p>
+      </div>
+      <p>Ik will graag een filter koffee alsjeblieft</p>
+    </div>
+    <div class="card-base front front-16">
+      <div class="card-base back">
+        <p>I would like a glass of red wine please</p>
+      </div>
+      <p>Ik zou graag een glas rood wijn willen alsjeblieft</p>
+    </div>
+    <div class="card-base front front-17">
+      <div class="card-base back">
+        <p>I would like a table for 2</p>
+      </div>
+      <p>Ik wil graag een tafel voor twee</p>
+    </div>
+    <div class="card-base front front-18">
+      <div class="card-base back">
+        <p>I am a Vegetarian</p>
+      </div>
+      <p>Ik ben een vegetarier</p>
+    </div>
+    <div class="card-base front front-19">
+      <div class="card-base back">
+        <p>Do you have vegetarian food?</p>
+      </div>
+      <p>Heeft u vegetarisch eten?</p>
+    </div>
+
+    <div class="card-base front front-20">
+      <div class="card-base back">
+        <p>2 beers please</p>
+      </div>
+      <p>Twee bier alsjeblieft</p>
+    </div>
+    <div class="card-base front front-21">
+      <div class="card-base back">
+        <p>Cheers!</p>
+      </div>
+      <p>Proost!</p>
+    </div>
+    <div class="card-base front front-22">
+      <div class="card-base back">
+        <p>Excuse me, Where are the toilets?</p>
+      </div>
+      <p>Pardon, waar is het toilet?</p>
+    </div>
+    <div class="card-base front front-23">
+      <div class="card-base back">
+        <p>Thank you / Thanks</p>
+      </div>
+      <p>Dank je wel / Bedankt</p>
+    </div>
+    <div class="card-base front front-24">
+      <div class="card-base back">
+        <p>You are welcome</p>
+      </div>
+      <p>Graag Gedaan</p>
+    </div>
+    <div class="card-base front front-25">
+      <div class="card-base back">
+        <p>I do not understand</p>
+      </div>
+      <p>Ik begrijp het niet</p>
+    </div>
+    <div class="card-base front front-26">
+      <div class="card-base back">
+        <p>I am sorry</p>
+      </div>
+      <p>Het spijt me</p>
+    </div>
+
+    <div class="card-base front front-27">
+      <div class="card-base back">
+        <p>Have a good day</p>
+      </div>
+      <p>fijne dag</p>
+    </div>
+    <div class="card-base front front-28">
+      <div class="card-base back">
+        <p>See you later</p>
+      </div>
+      <p>Tot Ziens!</p>
+    </div>
+
+
+
+
+
+
+
+
+
+
+  </section>
+
+  <footer>
+    <div class="credits">Site by <a href="www.billiegray.com" target="_blank">Billie Gray</a> - 2018</div>
+  </footer>
+
+
+
+  <div class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-close">close</div>
+    <div class="modal-content">
+      <h2>About This project:</h2>
+      In prep for my move accross the other side of the world, I figured I should probably start learning the local lingo. (Thanks
+      to Duolingo) I thought this would be a fun way to learn some common (and not so common) phrases and play with cool
+      color combinations from one of my favourite tools. <a href="">Khroma.</a>
+
+    </div>
+  </div>
+
+
+</body>
+
+</html>
