added about page and removed about modal

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img src="images/sandwich2.svg" alt="sandwich" />
     </div>
     <nav class="about">
-      <a href="about">
+      <a href="about.html">
         <img src="images/about.svg" />
       </a>
     </nav>
@@ -225,34 +225,11 @@
       <p>Tot Ziens!</p>
     </div>
 
-
-
-
-
-
-
-
-
-
   </section>
 
   <footer>
     <div class="credits">Site by <a href="www.billiegray.com" target="_blank">Billie Gray</a> - 2018</div>
   </footer>
-
-
-
-  <div class="modal">
-    <div class="modal-background"></div>
-    <div class="modal-close">close</div>
-    <div class="modal-content">
-      <h2>About This project:</h2>
-      In prep for my move accross the other side of the world, I figured I should probably start learning the local lingo. (Thanks
-      to Duolingo) I thought this would be a fun way to learn some common (and not so common) phrases and play with cool
-      color combinations from one of my favourite tools. <a href="">Khroma.</a>
-
-    </div>
-  </div>
 
 
 </body>
