updated about page

--- a/about.html
+++ b/about.html
@@ -28,10 +28,12 @@
   <section class="about-content">
     <div>
       <h2>About This project:</h2>
-      In prep for my move accross the other side of the world, I figured I should probably start learning the local lingo. (Thanks
-      to Duolingo) I thought this would be a fun way to learn some common (and not so common) phrases and play with cool
+      In prep for my move accross the other side of the world, I figured I should probably start learning the local
+      lingo. (Thanks
+      to Duolingo) I thought this would be a fun way to learn some common (and not so common) phrases and play with
+      cool
       color combinations from one of my favourite tools. <a href="">Khroma.</a>
 
     </div>
-    </sectio>
+  </section>
 </body>
