intro block and classes for mobile hover
added intro block, updated card wording, added class to replicate
mobile hover

--- a/index.html
+++ b/index.html
@@ -23,203 +23,212 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/sandwich2.svg" alt="sandwich" />
+      <img src="images/sandwich2.svg" alt="vegemite sandwich logo" />
     </div>
     <nav class="about">
       <a href="about.html">
-        <img src="images/about.svg" />
+        <img src="images/about.svg" alt="about link" title="Why?" />
       </a>
     </nav>
   </header>
 
+
   <section class="intro">
-    <h2>Hallo</h2>
+    <a href="https://youtu.be/0yA98MujNeM" target="_blank">
+      <img src="/images/waves.png" alt="waves" title="I am a happy little vegemite..." />
+    </a>
+    <h2>Dutch 101</h2>
+
+    <div class="hidden-small">
+      <p>Hover the cards to reveal the English translations</p>
+    </div>
+    <div class="visible-small">
+      <p>Pssst looks like you're on a mobile, click the cards to reveal the English translations</p>
+    </div>
   </section>
 
   <section class="cards-container">
 
     <div class="card-base front front-1">
-      <div class="card-base back">
-        <p>Good morning, Good afternoon,<br> Good evening and Goodnight</p>
+      <div class="card-base back hover">
+        <p>Hello, Hi</p>
       </div>
-      <p>Goedemorgen, Goedemiddag,<br> Goedenavond, Welterusten</p>
+      <p>Hallo, Hoi</p>
     </div>
 
     <div class="card-base front front-2">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>My Name is Billie</p>
       </div>
       <p>Ik heet Billie</p>
     </div>
 
     <div class="card-base front front-3">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>What is your name?</p>
       </div>
       <p>Hoe heet je?</p>
     </div>
 
     <div class="card-base front front-4">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>Nice to meet you</p>
       </div>
       <p>Aangenaam kennis te maken</p>
     </div>
 
     <div class="card-base front front-5">
-      <div class="card-base back">
-        <p>Do you speak Dutch?[Yes a bit]</p>
+      <div class="card-base back hover">
+        <p>Do you speak Dutch?<br>[Yes a bit]</p>
       </div>
-      <p>Spreek je Nederlands? <br/> [Ja, een beetje]
+      <p>Spreek je Nederlands? <br /> [Ja, een beetje]
       </p>
     </div>
 
     <div class="card-base front front-6">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>I am learning Dutch</p>
       </div>
       <p>Ik ben Nederlands aan het leren</p>
     </div>
 
     <div class="card-base front front-7">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>Do you speak English?</p>
       </div>
       <p>Spreek je Engles?</p>
     </div>
 
     <div class="card-base front front-8">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>I am from Melbourne</p>
       </div>
       <p>Ik ben kom uit Melbourne</p>
     </div>
 
     <div class="card-base front front-9">
-      <div class="card-base back">
-        <p>I live here now</p>
+      <div class="card-base back hover">
+        <p>I live in the<br> Netherlands now</p>
       </div>
-      <p>Ik woon hier nu</p>
+      <p>Ik woon nu in Nederland</p>
     </div>
     <div class="card-base front front-10">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>I am a designer</p>
       </div>
       <p>Ik ben een ontwerper</p>
     </div>
     <div class="card-base front front-11">
-      <div class="card-base back">
-        <p>I am looking for a job,<br> I have a working permit</p>
+      <div class="card-base back hover">
+        <p>I am looking for a job</p>
       </div>
-      <p>Ik zoek een baan,<br/>Ik heb een werkvergunning
-      </p>
+      <p>Ik zoek een baan</p>
+    </div>
+    <div class="card-base front front-12">
+      <div class="card-base back hover">
+        <p>I have a working<br> permit</p>
+      </div>
+      <p>Ik heb een werkvergunning</p>
     </div>
 
-
-
-
-    <div class="card-base front front-12">
-      <div class="card-base back">
+    <div class="card-base front front-13">
+      <div class="card-base back hover">
         <p>How are you? </p>
       </div>
       <p>Hoe gaat het?</p>
     </div>
 
-    <div class="card-base front front-13">
-      <div class="card-base back">
+    <div class="card-base front front-14">
+      <div class="card-base back hover">
         <p>I am well</p>
       </div>
       <p>Ik ben goede</p>
     </div>
 
-    <div class="card-base front front-14">
-      <div class="card-base back">
+    <div class="card-base front front-15">
+      <div class="card-base back hover">
         <p>Shall we go for a drink?</p>
       </div>
       <p>Zullen we iets gaan drinken?</p>
     </div>
-    <div class="card-base front front-15">
-      <div class="card-base back">
-        <p>I would like a Black / filter coffee please</p>
-      </div>
-      <p>Ik will graag een filter koffee alsjeblieft</p>
-    </div>
+
     <div class="card-base front front-16">
-      <div class="card-base back">
-        <p>I would like a glass of red wine please</p>
+      <div class="card-base back hover">
+        <p>I would like<br> a filter coffee please</p>
       </div>
-      <p>Ik zou graag een glas rood wijn willen alsjeblieft</p>
+      <p>Ik will graag<br> een filter koffee alsjeblieft</p>
     </div>
     <div class="card-base front front-17">
-      <div class="card-base back">
+      <div class="card-base back hover">
+        <p>I would like a glass<br> of red wine please</p>
+      </div>
+      <p>Ik wil graag een glas rode wijn alsjeblieft</p>
+    </div>
+    <div class="card-base front front-18">
+      <div class="card-base back hover">
         <p>I would like a table for 2</p>
       </div>
       <p>Ik wil graag een tafel voor twee</p>
     </div>
-    <div class="card-base front front-18">
-      <div class="card-base back">
-        <p>I am a Vegetarian</p>
-      </div>
-      <p>Ik ben een vegetarier</p>
-    </div>
+
     <div class="card-base front front-19">
-      <div class="card-base back">
-        <p>Do you have vegetarian food?</p>
+      <div class="card-base back hover">
+        <p>Do you have<br> vegetarian food?</p>
       </div>
       <p>Heeft u vegetarisch eten?</p>
     </div>
 
     <div class="card-base front front-20">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>2 beers please</p>
       </div>
       <p>Twee bier alsjeblieft</p>
     </div>
     <div class="card-base front front-21">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>Cheers!</p>
       </div>
       <p>Proost!</p>
     </div>
     <div class="card-base front front-22">
-      <div class="card-base back">
-        <p>Excuse me, Where are the toilets?</p>
+      <div class="card-base back hover">
+        <p>Excuse me,<br> where are the toilets?</p>
       </div>
       <p>Pardon, waar is het toilet?</p>
     </div>
     <div class="card-base front front-23">
-      <div class="card-base back">
-        <p>Thank you / Thanks</p>
+      <div class="card-base back hover">
+        <p>Thank you / Thank you</p>
       </div>
-      <p>Dank je wel / Bedankt</p>
+      <p>Dankuwel(f) / Bedankt(i) </p>
     </div>
     <div class="card-base front front-24">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>You are welcome</p>
       </div>
       <p>Graag Gedaan</p>
     </div>
     <div class="card-base front front-25">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>I do not understand</p>
       </div>
       <p>Ik begrijp het niet</p>
     </div>
     <div class="card-base front front-26">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>I am sorry</p>
       </div>
       <p>Het spijt me</p>
     </div>
 
     <div class="card-base front front-27">
-      <div class="card-base back">
-        <p>Have a good day</p>
+      <div class="card-base back hover">
+        <p>Good morning,<br> Good afternoon,<br> Good evening<br> and Goodnight</p>
       </div>
-      <p>fijne dag</p>
+      <p>Goedemorgen, Goedemiddag,<br> Goedenavond, Welterusten</p>
     </div>
     <div class="card-base front front-28">
-      <div class="card-base back">
+      <div class="card-base back hover">
         <p>See you later</p>
       </div>
       <p>Tot Ziens!</p>
@@ -228,7 +237,7 @@
   </section>
 
   <footer>
-    <div class="credits">Site by <a href="www.billiegray.com" target="_blank">Billie Gray</a> - 2018</div>
+    <div class="credits">Site by <a href="www.billiegray.com" target="_blank">Billie Gray</a> - 2018 </div>
   </footer>
 
 
