updated about page layout and styles

--- a/about.html
+++ b/about.html
@@ -16,24 +16,34 @@
 
 </head>
 
-<body class="about-background">
+<body class="about-page">
   <header>
     <div class="logo">
-      <a href="index.html">
-        <img src="images/sandwich2.svg" alt="sandwich" />
-      </a>
+      <img src="images/sandwich2.svg" alt="vegemite sandwich logo" />
     </div>
+    <nav class="home">
+      <a href="index.html">
+        <img src="images/cards.svg" alt="cards link" title="cards" />
+      </a>
+    </nav>
   </header>
+
+
+
 
   <section class="about-content">
     <div>
-      <h2>About This project:</h2>
+      <h2>About this project</h2>
       In prep for my move accross the other side of the world, I figured I should probably start learning the local
       lingo. (Thanks
       to Duolingo) I thought this would be a fun way to learn some common (and not so common) phrases and play with
       cool
-      color combinations from one of my favourite tools. <a href="">Khroma.</a>
+      color combinations from one of my favourite tools <a href="">Khroma.</a>
 
     </div>
   </section>
+  <footer>
+    <div class="credits">Site by <a href="www.billiegray.com" target="_blank">Billie Gray</a> - 2018 </div>
+  </footer>
+
 </body>
