adjusted margin on intro block and updated site description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Vegemite Boterham - Billie learns dutch</title>
-  <meta name="description" content="Billie Gray Web designer portfolio dutch learning">
+  <meta name="description" content="Billie Gray - Front end web designer learns dutch">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
