updated external link

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   </section>
 
   <footer>
-    <div class="credits">Site by <a href="www.billiegray.com" target="_blank">Billie Gray</a> - 2018 </div>
+    <div class="credits">Site by <a href="http://www.billiegray.com/" target="_blank">Billie Gray</a> - 2018 </div>
   </footer>
 
 
