updated link to Chrome

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       lingo. (Thanks
       to Duolingo) I thought this would be a fun way to learn some common (and not so common) phrases and play with
       cool
-      color combinations from one of my favourite tools <a href="">Khroma.</a>
+      color combinations from one of my favourite tools <a href="http://khroma.co/">Khroma.</a>
 
     </div>
   </section>
