--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <link rel="shortcut icon" href="/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i,900,900i|Space+Mono:400,700"
     rel="stylesheet">
+
+  <link href="/node_modules/normalize.css/normalize.css" rel=stylesheet>
   <link href="/css/style.css" rel=stylesheet>
+
   <meta name="google" value="notranslate">
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -108,136 +111,93 @@
 
     <div class="card-base front front-9">
       <div class="card-base back hover">
-        <p>I live in the<br> Netherlands now</p>
-      </div>
-      <p>Ik woon nu in Nederland</p>
-    </div>
-    <div class="card-base front front-10">
-      <div class="card-base back hover">
         <p>I am a designer</p>
       </div>
       <p>Ik ben een ontwerper</p>
     </div>
-    <div class="card-base front front-11">
-      <div class="card-base back hover">
-        <p>I am looking for a job</p>
-      </div>
-      <p>Ik zoek een baan</p>
-    </div>
-    <div class="card-base front front-12">
-      <div class="card-base back hover">
-        <p>I have a working<br> permit</p>
-      </div>
-      <p>Ik heb een werkvergunning</p>
-    </div>
 
-    <div class="card-base front front-13">
+    <div class="card-base front front-10">
       <div class="card-base back hover">
         <p>How are you? </p>
       </div>
       <p>Hoe gaat het?</p>
     </div>
 
-    <div class="card-base front front-14">
+    <div class="card-base front front-11">
       <div class="card-base back hover">
         <p>I am well</p>
       </div>
       <p>Ik ben goede</p>
     </div>
 
-    <div class="card-base front front-15">
+    <div class="card-base front front-12">
       <div class="card-base back hover">
         <p>Shall we go for a drink?</p>
       </div>
       <p>Zullen we iets gaan drinken?</p>
     </div>
 
-    <div class="card-base front front-16">
+    <div class="card-base front front-13">
       <div class="card-base back hover">
         <p>I would like<br> a filter coffee please</p>
       </div>
       <p>Ik will graag<br> een filter koffee alsjeblieft</p>
     </div>
-    <div class="card-base front front-17">
+
+    <div class="card-base front front-14">
       <div class="card-base back hover">
         <p>I would like a glass<br> of red wine please</p>
       </div>
       <p>Ik wil graag een glas rode wijn alsjeblieft</p>
     </div>
-    <div class="card-base front front-18">
-      <div class="card-base back hover">
-        <p>I would like a table for 2</p>
-      </div>
-      <p>Ik wil graag een tafel voor twee</p>
-    </div>
 
-    <div class="card-base front front-19">
-      <div class="card-base back hover">
-        <p>Do you have<br> vegetarian food?</p>
-      </div>
-      <p>Heeft u vegetarisch eten?</p>
-    </div>
-
-    <div class="card-base front front-20">
+    <div class="card-base front front-15">
       <div class="card-base back hover">
         <p>2 beers please</p>
       </div>
       <p>Twee bier alsjeblieft</p>
     </div>
-    <div class="card-base front front-21">
+
+    <div class="card-base front front-16">
       <div class="card-base back hover">
         <p>Cheers!</p>
       </div>
       <p>Proost!</p>
     </div>
-    <div class="card-base front front-22">
+
+    <div class="card-base front front-17">
       <div class="card-base back hover">
         <p>Excuse me,<br> where are the toilets?</p>
       </div>
       <p>Pardon, waar is het toilet?</p>
     </div>
-    <div class="card-base front front-23">
+
+    <div class="card-base front front-18">
       <div class="card-base back hover">
         <p>Thank you / Thank you</p>
       </div>
       <p>Dankuwel(f) / Bedankt(i) </p>
     </div>
-    <div class="card-base front front-24">
+
+    <div class="card-base front front-19">
       <div class="card-base back hover">
         <p>You are welcome</p>
       </div>
       <p>Graag Gedaan</p>
     </div>
-    <div class="card-base front front-25">
-      <div class="card-base back hover">
-        <p>I do not understand</p>
-      </div>
-      <p>Ik begrijp het niet</p>
-    </div>
-    <div class="card-base front front-26">
-      <div class="card-base back hover">
-        <p>I am sorry</p>
-      </div>
-      <p>Het spijt me</p>
-    </div>
 
-    <div class="card-base front front-27">
+    <div class="card-base front front-20">
       <div class="card-base back hover">
         <p>Good morning,<br> Good afternoon,<br> Good evening<br> and Goodnight</p>
       </div>
       <p>Goedemorgen, Goedemiddag,<br> Goedenavond, Welterusten</p>
     </div>
-    <div class="card-base front front-28">
-      <div class="card-base back hover">
-        <p>See you later</p>
-      </div>
-      <p>Tot Ziens!</p>
-    </div>
 
   </section>
 
   <footer>
-    <div class="credits">Site by <a href="http://www.billiegray.com/" target="_blank">Billie Gray</a> - 2018 </div>
+    <div class="credits">Tot Ziens! - Site by <a href="http://www.billiegray.com/" target="_blank">Billie Gray</a> - 2018
+      </div>
   </footer>
 
 
