--- a/index.html
+++ b/index.html
@@ -53,35 +53,35 @@
   <section class="cards-container">
 
     <div class="card-base front front-1">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover ">
         <p>Hello, Hi</p>
       </div>
       <p>Hallo, Hoi</p>
     </div>
 
     <div class="card-base front front-2">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>My Name is Billie</p>
       </div>
       <p>Ik heet Billie</p>
     </div>
 
     <div class="card-base front front-3">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>What is your name?</p>
       </div>
       <p>Hoe heet je?</p>
     </div>
 
     <div class="card-base front front-4">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Nice to meet you</p>
       </div>
       <p>Aangenaam kennis te maken</p>
     </div>
 
     <div class="card-base front front-5">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Do you speak Dutch?<br>[Yes a bit]</p>
       </div>
       <p>Spreek je Nederlands? <br /> [Ja, een beetje]
@@ -89,105 +89,105 @@
     </div>
 
     <div class="card-base front front-6">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>I am learning Dutch</p>
       </div>
       <p>Ik ben Nederlands aan het leren</p>
     </div>
 
     <div class="card-base front front-7">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Do you speak English?</p>
       </div>
       <p>Spreek je Engles?</p>
     </div>
 
     <div class="card-base front front-8">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>I am from Melbourne</p>
       </div>
       <p>Ik ben kom uit Melbourne</p>
     </div>
 
     <div class="card-base front front-9">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>I am a designer</p>
       </div>
       <p>Ik ben een ontwerper</p>
     </div>
 
     <div class="card-base front front-10">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>How are you? </p>
       </div>
       <p>Hoe gaat het?</p>
     </div>
 
     <div class="card-base front front-11">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>I am well</p>
       </div>
       <p>Ik ben goede</p>
     </div>
 
     <div class="card-base front front-12">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Shall we go for a drink?</p>
       </div>
       <p>Zullen we iets gaan drinken?</p>
     </div>
 
     <div class="card-base front front-13">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>I would like<br> a filter coffee please</p>
       </div>
       <p>Ik will graag<br> een filter koffee alsjeblieft</p>
     </div>
 
     <div class="card-base front front-14">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>I would like a glass<br> of red wine please</p>
       </div>
       <p>Ik wil graag een glas rode wijn alsjeblieft</p>
     </div>
 
     <div class="card-base front front-15">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>2 beers please</p>
       </div>
       <p>Twee bier alsjeblieft</p>
     </div>
 
     <div class="card-base front front-16">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Cheers!</p>
       </div>
       <p>Proost!</p>
     </div>
 
     <div class="card-base front front-17">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Excuse me,<br> where are the toilets?</p>
       </div>
       <p>Pardon, waar is het toilet?</p>
     </div>
 
     <div class="card-base front front-18">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Thank you / Thank you</p>
       </div>
       <p>Dankuwel(f) / Bedankt(i) </p>
     </div>
 
     <div class="card-base front front-19">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>You are welcome</p>
       </div>
       <p>Graag Gedaan</p>
     </div>
 
     <div class="card-base front front-20">
-      <div class="card-base back hover">
+      <div onclick="" class="card-base back hover">
         <p>Good morning,<br> Good afternoon,<br> Good evening<br> and Goodnight</p>
       </div>
       <p>Goedemorgen, Goedemiddag,<br> Goedenavond, Welterusten</p>
@@ -197,7 +197,7 @@
 
   <footer>
     <div class="credits">Tot Ziens! - Site by <a href="http://www.billiegray.com/" target="_blank">Billie Gray</a> - 2018
-      </div>
+    </div>
   </footer>
 
 
